--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ debugpy==1.8.19
 decorator==5.2.1
 et_xmlfile==2.0.0
 executing==2.2.1
+fastjsonschema==2.21.2
 gitdb==4.0.12
 GitPython==3.1.46
 idna==3.11
@@ -26,6 +27,7 @@ jupyter_core==5.9.1
 MarkupSafe==3.0.3
 matplotlib-inline==0.2.1
 narwhals==2.15.0
+nbformat==5.10.4
 nest-asyncio==1.6.0
 numpy==2.4.1
 openpyxl==3.1.5
@@ -35,6 +37,7 @@ parso==0.8.5
 pexpect==4.9.0
 pillow==12.1.0
 platformdirs==4.5.1
+plotly==6.5.2
 prompt_toolkit==3.0.52
 protobuf==6.33.4
 psutil==7.2.1
