--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,42 @@
+altair==6.0.0
 attrs==25.4.0
-certifi==2025.11.12
-cffi==2.0.0
-cryptography==46.0.3
-cupshelpers==1.0
-dbus-python==1.4.0
-filelock==3.20.0
-packaging==25.0
-psutil==7.1.3
-pycairo==1.29.0
-pycparser==2.23
-pycups==2.0.4
-pygdbmi==0.11.0.0
-PyGObject==3.54.5
-sentry-sdk==2.47.0
-smbus==1.1
-TBB==0.2
-urllib3==2.6.2
-wheel==0.45.1
+blinker==1.9.0
+cachetools==6.2.6
+certifi==2026.1.4
+charset-normalizer==3.4.4
+click==8.3.1
+gitdb==4.0.12
+GitPython==3.1.46
+idna==3.11
+Jinja2==3.1.6
+jsonschema==4.26.0
+jsonschema-specifications==2025.9.1
+MarkupSafe==3.0.3
+narwhals==2.15.0
+numpy==2.4.1
+packaging==26.0
+pandas==2.3.3
+patsy==1.0.2
+pillow==12.1.0
+plotly==6.5.2
+plotly-express==0.4.1
+protobuf==6.33.5
+pyarrow==23.0.0
+pydeck==0.9.1
+python-dateutil==2.9.0.post0
+pytz==2025.2
+referencing==0.37.0
+requests==2.32.5
+rpds-py==0.30.0
+scipy==1.17.0
+six==1.17.0
+smmap==5.0.2
+statsmodels==0.14.6
+streamlit==1.53.1
+tenacity==9.1.2
+toml==0.10.2
+tornado==6.5.4
+typing_extensions==4.15.0
+tzdata==2025.3
+urllib3==2.6.3
+watchdog==6.0.0
